Implement custom handler for access denied exception